# athlete-data-platform

./: README.md  databricks.yml  index.html  pyproject.toml
.claude/: settings.local.json
Architecture Design/: Data Athlete Diagram.drawio (1).html
dataflow/: DF_Lookup_ID_Activity.json  DF_Lookup_table_control.json
dataset/: DS_Athlete_Rest.json  DS_CSV_IDsLookup.json  DS_CSV_IDsStaging.json  DS_JSON_AtividadesDiarias.json  DS_JSON_Le_IDs.json  DS_JSON_SubActivity.json  DS_JSON_activite_for_sub.json  DS_Json_AthleteActivities.json  DS_Json_DL_Strava_Athlete.json  DS_Json_Strava.json  DS_REST_Strava_subactivities.json  DS_Read_JSON_Activities.json  DS_Rest.json  DS_Rest_AthleteActivities.json  DS_Rest_Incre_AthleteActivities.json  DS_Sub_activities_Rest.json  athelteJson.json  csv_control.json  destination_files.json  ds_json_provisorio.json  source_files.json
factory/: adf-strava-api.json
linkedService/: HttpServer1.json  KV_ClientID.json  KV_Strava.json  LS_Strava_API.json  LS_Strava_Datalake.json
notebooks/: (Clone) Bronze_Activity.ipynb  1 - Bronze Load.ipynb  4 - Analise GPT.ipynb  Analise GPT.ipynb  Bronze Sub_activity.ipynb  Bronze_Activity.ipynb  Bronze_AutoLoader_Class.ipynb  Clean Tables.ipynb  Gold.ipynb  Silver.ipynb  Silver_Stream.ipynb  Silver_SubActivity_Stream.ipynb  Silver_activity_feature.ipynb  Tabela_controle_carga.ipynb  Test_data.ipynb  dataContract.yaml  dataquality_rules_strava.py  first_Bronze Sub_activity.ipynb  first_Bronze_Activity.ipynb  first_Bronze_Athlete.ipynb  py_auto_loader_class.py  py_functions_silver.py  (+1 more)
src/: __init__.py  (+1 more)
(+57 files in other folders)
