[project]
name = "athlete_platform"
version = "0.0.1"
authors = [{ name = "Luis Correa", email = "luisgcorrea94@gmail.com" }]
description = "Athlete Data Platform - Feature Store and MLOps"
requires-python = ">=3.10,<3.13"
dependencies = [
    # Dependencies for the feature engineering and ML modules
]

[dependency-groups]
dev = [
    "pytest",
    "databricks-dlt",
    "databricks-connect>=15.4,<15.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 125
